--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="top-bar">
-        <h1>DistriTree: IO-Optimized Distributed B+ Tree</h1>
+        <h1>IO-Optimized Distributed B+ Tree</h1>
     </div>
 
     <div class="container">
