Made use of actual databases to store data

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -69,7 +69,10 @@
 
         <!-- Middle Panel: Visual Tree -->
         <div class="panel middle-panel">
-            <h2>Index Node (RAM) - B+ Tree</h2>
+            <div class="panel-header">
+                <h2>Index Node (RAM) - B+ Tree</h2>
+                <button id="reset-btn" class="btn-reset">Reset</button>
+            </div>
             <div id="tree-container" class="tree-viz">
                 <!-- Tree nodes will be drawn here -->
                 <div class="placeholder-text">Tree visualization will appear here after insertion.</div>
